--- a/src/partials/home-page/header.html
+++ b/src/partials/home-page/header.html
@@ -10,13 +10,10 @@
       <ul class="pages">
         <li class="page">
           <a href="/src/index.html" class="page-link page-link--current-page"
-            >home</a
-          >
+            >home</a>
         </li>
-        <li class="page is-hidden">
-          <a href="/src/library.html" class="page-link" id="libraryLink"
-            >my library</a
-          >
+        <li class="page">
+          <a href="/src/library.html" class="page-link js-library">my library</a>
         </li>
       </ul>
     </nav>
