--- a/src/sass/components/_change-theme.scss
+++ b/src/sass/components/_change-theme.scss
@@ -9,18 +9,8 @@ body.dark-theme {
   color: $secondary-color;
   transition: 0.5s;
 
-  & .pagination__button {
-    background-color: #333333;
-    color: lightgrey;
-    transition: 0.5s;
-  }
-
-  & .pagination__button--current {
-    background-color: $accent-color;
-  }
-
   & .movie-card__title {
-    color: #cccccc;
+    color: $secondary-color-shade-light;
   }
 
   & .movie-card__brief {
@@ -28,7 +18,11 @@ body.dark-theme {
   }
 
   & .footer__text {
-    color: lightgrey;
+    color: $secondary-color-shade-light;
+  }
+
+  & .footer__info {
+    color: $secondary-color-shade-light;
   }
 
   & .theme-switch__icon--accent1 {
@@ -51,6 +45,23 @@ body.dark-theme {
 
   & .modal-movie-descript {
     color: $primary-color;
+  }
+
+  & .pagination-list span {
+    background-color: $secondary-color-shade-dark;
+    color: $secondary-color;
+
+    &:hover,
+    &:focus {
+    border-color: $secondary-color-shade-dark;
+    background-color: $accent-color;
+    color: $primary-color;
+    box-shadow: 0px 4px 4px rgba($primary-color, 0.25);
+    }
+
+    &:active{
+      background-color: #fff;
+    }
   }
 
   & .main-wrapper {
@@ -87,8 +98,8 @@ body.dark-theme {
     margin-right: 15px;
     //&:focus,
     &:hover {
-      background-color: #f7f7f7;
-      border-color: #545454;
+      background-color: $secondary-color-shade-light;
+      border-color: $secondary-color-shade-dark;
       box-shadow: 0 4px 4px #00000040;
     }
   }
@@ -96,21 +107,21 @@ body.dark-theme {
   .modal-queue-button {
     //&:focus,
     &:hover {
-      background-color: #f7f7f7;
-      border-color: #545454;
+      background-color: $secondary-color-shade-light;
+      border-color: $secondary-color-shade-dark;
       box-shadow: 0 4px 4px #00000040;
     }
   }
 
   .active {
-    background-color: #ff6b08;
-    border: 2px solid #ff6b08;
-    box-shadow: 0 8px 43px #ff6b08;
+    background-color: $accent-color;
+    border: 2px solid $accent-color;
+    box-shadow: 0 8px 43px $accent-color;
     color: $secondary-color;
     &:hover {
-      background-color: #ff6b08;
-      border: 2px solid #ff6b08;
-      box-shadow: 0 8px 43px #ff6b08;
+      background-color: $accent-color;
+      border: 2px solid $accent-color;
+      box-shadow: 0 8px 43px $accent-color;
       color: $secondary-color;
     }
   }
@@ -256,8 +267,8 @@ body.dark-theme {
 }
 
 .dark-theme {
-  color: lightgrey;
-  background-color: #222;
+  color: $secondary-color-shade-light;
+  background-color: $dark-theme-background-color;
   transition: 0.5s;
 }
 
