--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -5,12 +5,17 @@ $desktop: 1024px;
 $primary-font: 'Roboto', sans-serif;
 
 $primary-color: #000000;
+$dark-theme-background-color: #222;
 $secondary-color: #ffffff;
 $secondary-color-shade-light: #f7f7f7;
 $secondary-color-shade-dark: #545454;
 $accent-color-grey: rgb(141, 141, 141);
 $accent-color: #ff6b08;
 $warning-color: #ff001b;
+$youtube-color: #f61c0d;
+$youtube-color-hover: #ff1100b7;
+$loader-box-background: #fee8d8;
+$loader-box-element-background: #dcdcdc;
 
 $transition-duration: 250ms;
 $transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
