stand-with-ukraine

--- a/src/partials/utils/footer.html
+++ b/src/partials/utils/footer.html
@@ -10,5 +10,10 @@
       <span class="footer__info--accent js-open-modal">Grow IT Team</span>
     </p>
   </div>
+  <a class="footer-link" href="https://standwithukraine.live/">
+    <p class="footer-link__text">support & help</p>
+    <img src="https://www.animatedimages.org/data/media/908/animated-ukraine-flag-image-0001.gif" alt="Ukraine flag"
+      class="footer-link__img">
+    <p class="footer-link__text">#Stand with Ukraine</p>
+  </a>
 </footer>
-
