add develop positions to footer-modal

--- a/src/partials/utils/footer-modal.html
+++ b/src/partials/utils/footer-modal.html
@@ -4,6 +4,7 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <img src="./images/footer-modal/kotenko.jpg" class="swiper-slider__img" loading='lazy'/>
+                        <p class="slides__position">team lead</p>
                         <p class="swiper-slider__name">Konstantin Kotenko</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -24,6 +25,7 @@
                     </div>
                     <div class="swiper-slide">
                         <img src="./images/footer-modal/tolmachev.jpg" class="swiper-slider__img" loading='lazy'/>
+                        <p class="slides__position">developer</p>
                         <p class="swiper-slider__name">Denis Tolmachev</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -45,6 +47,7 @@
                     </div>
                     <div class="swiper-slide">
                         <img src="./images/footer-modal/severin.jpg" class="swiper-slider__img" loading='lazy'/>
+                        <p class="slides__position">developer</p>
                         <p class="swiper-slider__name">Artem Severin</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -65,6 +68,7 @@
                     </div>
                     <div class="swiper-slide">
                         <img src="./images/footer-modal/lyfar.jpg" class="swiper-slider__img" loading='lazy' />
+                        <p class="slides__position">developer</p>
                         <p class="swiper-slider__name">Natalia Lyfar</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -86,6 +90,7 @@
                     </div>
                     <div class="swiper-slide">
                         <img src="./images/footer-modal/nagorna.jpg" class="swiper-slider__img" loading='lazy' />
+                        <p class="slides__position">developer</p>
                         <p class="swiper-slider__name">Olena Nahorna</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -106,6 +111,7 @@
                     </div>
                     <div class="swiper-slide">
                         <img src="./images/footer-modal/Boiko.jpg" class="swiper-slider__img" loading='lazy' />
+                        <p class="slides__position">scrum macter</p>
                         <p class="swiper-slider__name">Juliya Boiko</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -126,6 +132,7 @@
                     </div>
                     <div class="swiper-slide">
                         <img src="./images/footer-modal/khmil.jpg" class="swiper-slider__img" loading='lazy' />
+                        <p class="slides__position">developer</p>
                         <p class="swiper-slider__name">Vitalii Khmil</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -146,6 +153,7 @@
                     </div>
                     <div class="swiper-slide">
                         <img src="./images/footer-modal/baliajpg.jpg" class="swiper-slider__img" loading='lazy' />
+                        <p class="slides__position">developer</p>
                         <p class="swiper-slider__name">Ivan Balya</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -166,6 +174,7 @@
                     </div>
                     <div class="swiper-slide">
                         <img src="./images/footer-modal/oliynik.jpg" class="swiper-slider__img" loading='lazy' />
+                        <p class="slides__position">developer</p>
                         <p class="swiper-slider__name">Volodymyr Oliinyk</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -186,6 +195,7 @@
                     </div>
                     <div class="swiper-slide">
                         <img src="./images/footer-modal/larin.jpg" class="swiper-slider__img" loading='lazy' />
+                        <p class="slides__position">developer</p>
                         <p class="swiper-slider__name">Artem Larin</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -207,6 +217,7 @@
                     </div>
                     <div class="swiper-slide">
                         <img src="./images/footer-modal/trush.jpg" class="swiper-slider__img" loading='lazy' />
+                        <p class="slides__position">developer</p>
                         <p class="swiper-slider__name">Volodymir Trush</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
