header sass optim

--- a/src/partials/home-page/header.html
+++ b/src/partials/home-page/header.html
@@ -1,6 +1,6 @@
-<header class="overlay header-home">
-  <div class="header-container">
-    <nav>
+<header class="overlay header-home-bgi">
+  <div class="container header-container">
+    <nav class="navigation">
       <a class="logo-container logo" href="/src/index.html">
         <svg class="icon-logo" width="24" height="24">
           <use href="/src/images/icons.svg#icon-logo"></use>
