--- a/src/partials/my-library/header.html
+++ b/src/partials/my-library/header.html
@@ -1,6 +1,6 @@
-<header class="overlay header-library">
-  <div class="header-container">
-    <nav>
+<header class="overlay header-library-bgi">
+  <div class="header-library-container">
+    <nav class="navigation">
       <a class="logo-container" href="/src/index.html">
         <svg class="icon-logo" width="24" height="24">
           <use href="/src/images/icons.svg#icon-logo"></use>
@@ -30,5 +30,4 @@
     </div>
     <include src="./partials/utils/switch-theme.html"></include>
   </div>
-  <!-- <include src="./partials/utils/switch-theme.html"></include> -->
 </header>
