--- a/src/sass/components/_header-home-page.scss
+++ b/src/sass/components/_header-home-page.scss
@@ -1,139 +1,54 @@
-.header-home {
-  position: relative;
-
-  background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.56),
-      rgba(0, 0, 0, 0.56)
-    ),
-    url('../images/header-home-page/header-bg-main-mobile.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  margin-left: auto;
-  margin-right: auto;
-height: 230px;
-  @media screen and (min-width: $mobile) {
-    
-    background: linear-gradient(
-        to right,
-        rgba(0, 0, 0, 0.56),
-        rgba(0, 0, 0, 0.56)
-      ),
-      url('../images/header-home-page/header-bg-main-mobile.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-
-    @media screen and (max-width: ($tablet - 1)) and (min-device-pixel-ratio: 2),
-      screen and (max-width: ($tablet - 1)) and (min-resolution: 192dpi),
-      screen and (max-width: ($tablet - 1)) and (min-resolution: 2dppx) {
-      background-image: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url('../images/header-home-page/header-bg-main-mobile@2x.jpg');
-    }
+.header-home-bgi {
+  height: 230px;
+  @media screen and (min-width: $tablet) {
+    height: 215px;
   }
 
-  @media screen and (min-width: $tablet) {
-    
-    background: linear-gradient(
-        to right,
-        rgba(0, 0, 0, 0.56),
-        rgba(0, 0, 0, 0.56)
-      ),
-      url('../images/header-home-page/header-bg-main-tablet.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-  }
-
-  @media screen and (min-width: $tablet) {
-    
-    background: linear-gradient(
-        to right,
-        rgba(0, 0, 0, 0.56),
-        rgba(0, 0, 0, 0.56)
-      ),
-      url('../images/header-home-page/header-bg-main-tablet.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-
-    @media screen and (max-width: ($desktop - 1)) and (min-device-pixel-ratio: 2),
-      screen and (max-width: ($desktop - 1)) and (min-resolution: 192dpi),
-      screen and (max-width: ($desktop - 1)) and (min-resolution: 2dppx) {
-      background-image: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url('../images/header-home-page/header-bg-main-tablet@2x.jpg');
+  @include bgi('../images/header-home-page/header-bg-main-mobile.jpg');
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      @include bgi('../images/header-home-page/header-bg-main-mobile@2x.jpg');
     }
-
-    @media screen and (min-width: $desktop) {
-      
-      background: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url('../images/header-home-page/header-bg-main-desktop.jpg');
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center;
-
-      @media screen and (min-device-pixel-ratio: 2),
-        screen and (min-resolution: 192dpi),
-        screen and (min-resolution: 2dppx) {
-        background-image: linear-gradient(
-            to right,
-            rgba(0, 0, 0, 0.56),
-            rgba(0, 0, 0, 0.56)
-          ),
-          url('../images/header-home-page/header-bg-main-desktop@2x.jpg');
+  
+  @media screen and (min-width: $tablet) {
+    @include bgi('../images/header-home-page/header-bg-main-tablet.jpg');
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+        @include bgi('../images/header-home-page/header-bg-main-tablet@2x.jpg');
       }
-    }
-  }
-}
-
-.page-link:hover {
-  border-bottom: 3px solid $accent-color;
-}
-
-.page-link:focus {
-  border-bottom: 3px solid $accent-color;
-}
-
-.search-form {
-  position: relative;
-  margin-right: auto;
-  margin-left: auto;
-  max-width: auto;
-
-  @media screen and (min-width: $mobile) {
-    width: 280px;
-  }
-
-  @media screen and (min-width: $tablet) {
-    width: 336px;
   }
 
   @media screen and (min-width: $desktop) {
+    @include bgi('../images/header-home-page/header-bg-main-desktop.jpg');
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+        @include bgi('../images/header-home-page/header-bg-main-desktop@2x.jpg');
+      }
+  }
+}
+
+.search-form {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  max-width: auto;
+  border-bottom: 1px solid $secondary-color;
+  @media screen and (min-width: $mobile) {
+    width: 280px;
+  }
+  @media screen and (min-width: $tablet) {
     width: 336px;
   }
 }
 
 .search-field {
   width: 100%;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font(400, 14px, 1.14);
   background-color: transparent;
-  border: transparent;
-  border-bottom: 1px solid $secondary-color;
-  font-family: $primary-font;
+  border: none;
   color: $secondary-color;
 
   &::placeholder {
@@ -142,7 +57,6 @@ height: 230px;
 
   &:focus {
     outline: none;
-    border-bottom: 1px solid $accent-color;
 
     &::placeholder {
       color: $accent-color;
@@ -151,12 +65,9 @@ height: 230px;
 }
 
 .search-btn {
-  position: absolute;
-  top: 0;
-  right: 0;
   padding: 0;
   background-color: transparent;
-  border: transparent;
+  border: none;
   color: $secondary-color;
 
   .search-field:focus ~ & {
