--- a/src/sass/components/_header-library.scss
+++ b/src/sass/components/_header-library.scss
@@ -1,92 +1,51 @@
-.header-library {
-  position: relative;
-
-  background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.56),
-      rgba(0, 0, 0, 0.56)
-    ),
-    url('/src/images/header-library/header-background-image-mobile.webp');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-color: black;
-  margin-left: auto;
-  margin-right: auto;
+.header-library-bgi {
   height: 230px;
-  @media screen and (min-width: $mobile) {
-    background: linear-gradient(
-        to right,
-        rgba(0, 0, 0, 0.56),
-        rgba(0, 0, 0, 0.56)
-      ),
-      url('/src/images/header-library/header-background-image-mobile.webp');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    @media screen and (max-width: ($tablet - 1)) and (min-device-pixel-ratio: 2),
-      screen and (max-width: ($tablet - 1)) and (min-resolution: 192dpi),
-      screen and (max-width: ($tablet - 1)) and (min-resolution: 2dppx) {
-      background-image: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url('/src/images/header-library/mobile\ 2x.webp');
+  @media screen and (min-width: $tablet) {
+      height: 220px;
+  }
+
+  @include bgi('../images/header-library/header-background-image-mobile.webp');
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      @include bgi('../images/header-library/mobile-2x.webp');
+    }
+
+  @media screen and (min-width: $tablet) {
+    @include bgi('../images/header-library/header-background-image-tablet.webp');
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      @include bgi('../images/header-library/tablet-2x.webp');
     }
   }
-  @media screen and (min-width: $tablet) {
-    background: linear-gradient(
-        to right,
-        rgba(0, 0, 0, 0.56),
-        rgba(0, 0, 0, 0.56)
-      ),
-      url('/src/images/header-library/header-background-image-tablet.webp');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+
+  @media screen and (min-width: $desktop) {
+    @include bgi('../images/header-library/header-background-image-desktop.webp');
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      @include bgi('../images/header-library/desktop-2x.webp');
+    }
   }
+}
+
+.header-library-container {
+  margin: 0 auto;
+  padding: 0 20px;
+
+  @media screen and (max-width: 767px) {
+    width: $mobile;
+  }
+
   @media screen and (min-width: $tablet) {
-    background: linear-gradient(
-        to right,
-        rgba(0, 0, 0, 0.56),
-        rgba(0, 0, 0, 0.56)
-      ),
-      url('/src/images/header-library/header-background-image-tablet.webp');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    @media screen and (max-width: ($desktop - 1)) and (min-device-pixel-ratio: 2),
-      screen and (max-width: ($desktop - 1)) and (min-resolution: 192dpi),
-      screen and (max-width: ($desktop - 1)) and (min-resolution: 2dppx) {
-      background-image: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url('/src/images/header-library/tablet\ 2x.webp');
-    }
-    @media screen and (min-width: $desktop) {
-      background: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url('/src/images/header-library/header-background-image-desktop.webp');
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center;
-      @media screen and (min-device-pixel-ratio: 2),
-        screen and (min-resolution: 192dpi),
-        screen and (min-resolution: 2dppx) {
-        background-image: linear-gradient(
-            to right,
-            rgba(0, 0, 0, 0.56),
-            rgba(0, 0, 0, 0.56)
-          ),
-          url('/src/images/header-library/desktop\ 2x.webp');
-      }
-    }
+    width: $tablet;
+    padding: 0 32px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: $desktop;
+    padding: 0 71px;
   }
 }
 
@@ -102,9 +61,15 @@
   color: $secondary-color;
   width: 100%;
   height: 44px;
-
   @media screen and (min-width: $mobile) {
     width: 130px;
+  }
+
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+    border: 2px solid $accent-color;
+    box-shadow: 0px 8px 43px 0px $accent-color;
   }
 }
 
@@ -112,23 +77,12 @@
   margin-left: 20px;
 }
 
-.header-button:hover {
-  background-color: $accent-color;
-  border: 2px solid $accent-color;
-  box-shadow: 0px 8px 43px 0px $accent-color;
-}
-
-.header-button:focus {
-  background-color: $accent-color;
-  border: 2px solid $accent-color;
-  box-shadow: 0px 8px 43px 0px $accent-color;
-}
-
-.page-link:focus {
-  border-bottom: 3px solid $accent-color;
-}
 .orange {
   background-color: $accent-color;
   border: 2px solid $accent-color;
   box-shadow: 0px 8px 43px 0px $accent-color;
 }
+
+// .page-link:focus {
+//   border-bottom: 3px solid $accent-color;
+// }
