--- a/src/sass/components/_change-theme.scss
+++ b/src/sass/components/_change-theme.scss
@@ -64,6 +64,11 @@ body.dark-theme {
     &:active{
       background-color: #fff;
     }
+    &.active {
+      background-color: $accent-color;
+      color: $secondary-color;
+   box-shadow: 0px 4px 4px rgba($primary-color, 0.25);
+  }
   }
 
   & .main-wrapper {
