--- a/src/partials/home-page/main.html
+++ b/src/partials/home-page/main.html
@@ -1,3 +1,21 @@
 <div class="main__container container">
-  <div class="gallery" id="abc"></div>
+  <h2 class="visually-hidden">Searched movies</h2>
+  <div class="search-filter">
+    <ul class="search-btn-list">
+      <li class="search-btn-item">
+        <button type="button" class="button popular-btn" data-action="popular">TRENDING</button>
+      </li>
+      <li class="search-btn-item">
+        <button type="button" class="button top-rated-btn" data-action="top rated">
+          TOPRATED
+        </button>
+      </li>
+      <li class="search-btn-item">
+        <button type="button" class="button upcoming-btn" data-action="upcoming">
+          UPCOMING
+        </button>
+      </li>
+    </ul>
+  </div>
+<div class="gallery" id="abc"></div>
 </div>
