--- a/src/template/movieCard.hbs
+++ b/src/template/movieCard.hbs
@@ -24,7 +24,7 @@
           {{#if genres}}
             {{#each genres}}
               <li class='movie-card__genre'>
-                <a href='' class='movie-card__text'>{{this}}{{#unless @last}},
+                <a class='movie-card__text'>{{this}}{{#unless @last}},
                   {{/unless}}</a>
               </li>
             {{/each}}
