--- a/src/sass/components/_modal-movie.scss
+++ b/src/sass/components/_modal-movie.scss
@@ -341,8 +341,8 @@
   width: 48px;
   height: 36px;
   border-radius: 10px;
-  border: solid 1px $youtube-color;
-  box-shadow: 0px 4px 4px rgba($primary-color, 0.45);
+  border: none;
+  box-shadow: 0px 14px 14px rgba($primary-color, 0.45);
   cursor: pointer;
   justify-content: center;
   align-items: center;
